k8s/client-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: client-svc
spec:
  type: ClusterIP
  selector:
    app: client
  ports:
    - port: 80
      targetPort: 80
