k8s/server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: server-svc
spec:
  type: ClusterIP
  selector:
    app: server
  ports:
    - port: 3000
      targetPort: 3000
